# projet-_final

youssef.final/youssef /: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  election.txt  youssef-.glade  youssef-.gladep.bak
youssef.final/youssef /autom4te.cache/: output.1  requests  traces.0  traces.1
youssef.final/youssef /po/: Makefile  Makefile.in
youssef.final/youssef /src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  election.txt  electionRech.txt  fonctions.c  fonctions.h  interface.c  interface.c.bak  interface.h.bak  main.c  user.txt  youssef-
youssef.final/youssef /src/.deps/: fonctions.Po
